# stubs-SEAL-Python

./: .gitignore  .gitmodules  init.sh  mypy.sh  pyproject.toml  pytest.sh
stubs/: README.md  cpp_types.py  my_types.py  seal.pyi  types.py
tests/: README.md  test_numpy.py
tests/seal/: test_seal_context.py  utils.py
