[tool.poetry]
name = "stubs-seal-python"
version = "0.1.0"
description = "stub files for SEAL-Python"
authors = ["y"]

[tool.poetry.dependencies]
python = "3.10.4"
mypy = "^0.942"
numpy = "^1.22.3"
pybind11 = "^2.9.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
